httpdocs/callam-williams/themes/callam-williams/assets/src/sass/layout/_header.scss
.header {
	display: flex;
	align-items: center;
	justify-content: center;
	width: 100%;
	min-height: 100px;
	background: $brand-primary;
	color: $brand-tertiary;
	text-transform: uppercase;

	&__title {
		@include font-size(22px, 25px);
		padding-left: 20px;
		span {
			font-weight: bold;
		}
	}

	&__content {
		display: flex;
		justify-content: space-between;
		width: 100%;
		max-width: rem-calc(1840);
	}

	&__navigation {
		display: flex;

		span {
			margin: 5px 10px 0;
			padding: 0 5px;
		}
	}

}

